fix(frontend): Restrict width of details area in 'bet-table', reduce height of 'bet-editor', and remove 'overflow: hidden' rule on 'table' element to ensure sticky property works on mobile

--- a/src/app/bet-editor/bet-editor.component.scss
+++ b/src/app/bet-editor/bet-editor.component.scss
@@ -41,6 +41,7 @@ section {
   text-align: center;
 }
 
+
 button.close {
   background: none;
   width: 30px;
@@ -51,6 +52,10 @@ button.close {
   top: 0;
   left: 0;
   padding: 2px;
+}
+
+h3 {
+  margin: 8px 0;
 }
 
 form {
@@ -74,7 +79,7 @@ fieldset {
   align-items: center;
   gap: 6px;
   border: none;
-  padding: 1em 0;
+  padding: 8px 0;
 
   .form-field {
     display: flex;
@@ -128,7 +133,7 @@ fieldset {
 }
 
 h4 {
-  margin: 1.4em 0 0;
+  margin: 24px 0 0;
   font-size: 14px;
   font-weight: normal;
 }
@@ -140,7 +145,7 @@ hr {
   border-top: 1px solid rgba(194, 194, 194, 0.6);
 
   & + fieldset {
-    padding-top: 0.2em;
+    padding-top: 0;
   }
 }
 
@@ -153,7 +158,7 @@ hr {
     &.submit,
     &.delete {
       padding: 4px 12px;
-      margin: 16px 0 8px;
+      margin: 8px 0;
       border: 1px solid hsla(0, 0%, 87%, 0.5);
       border-radius: 4px;
     }
