--- a/src/app/bet-table/bet-table.component.scss
+++ b/src/app/bet-table/bet-table.component.scss
@@ -13,7 +13,6 @@
 table {
   max-width: 600px;
   box-shadow: 3px 2px 8px 0 hsla(0, 0%, 89%, 0.7);
-  overflow: hidden;
   border-radius: 4px;
   border-collapse: collapse;
 
@@ -75,7 +74,7 @@ table {
     }
 
     &:hover {
-      background-color: hsla(199, 43%, 83%, 0.272);
+      background-color: hsla(199, 43%, 83%, 0.3);
       cursor: pointer;
     }
 
@@ -84,8 +83,12 @@ table {
 
       &.bet-details {
         min-width: 120px;
+        max-width: 160px;
         font-size: 12px;
         white-space: pre-wrap;
+        overflow-wrap: break-word;  
+        word-wrap: break-word; 
+        word-break: break-word;
 
         &.done {
           color:hsla(0, 0%, 20%, 0.4);
